load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "autoscalingv1",
    srcs = ["autoscalingv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/autoscalingv1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/metav1",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
    ],
)
