load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "autoscalingv2",
    srcs = ["autoscalingv2_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/autoscalingv2",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/corev1",
        "//go/apis/metav1",
        "//vendor/k8s.io/apimachinery/pkg/api/resource",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
    ],
)
